--- a/PluginTest/PluginTest.csproj
+++ b/PluginTest/PluginTest.csproj
@@ -1,20 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
-    <IsAotCompatible>true</IsAotCompatible>
+    <PublishAot>true</PublishAot>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <InvariantGlobalization>true</InvariantGlobalization>
     <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="PluginTest\**" />
-    <EmbeddedResource Remove="PluginTest\**" />
-    <None Remove="PluginTest\**" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-preview.3.25171.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hi3Helper.Plugin.Core.csproj" />
   </ItemGroup>
 
 </Project>
