Async Handler Refactors + New APIs
I dunno what's changed but it worth a day non-stop for refactoring this thing :terikms:
Also, adding full support for Exceptions on Async YAAAAYYYYYYY

--- a/PluginTest/Properties/launchSettings.json
+++ b/PluginTest/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "PluginTest": {
       "commandName": "Project",
-      "commandLineArgs": "\"E:\\myGit\\Hi3Helper.Plugin.HBR\\Hi3Helper.Plugin.HBR\\publish\\Debug\\Hi3Helper.Plugin.HBR.dll\""
+      "commandLineArgs": "NoWait \"E:\\myGit\\Hi3Helper.Plugin.HBR\\Hi3Helper.Plugin.HBR\\publish\\Debug\\Hi3Helper.Plugin.HBR.dll\"",
+      "nativeDebugging": true
     }
   }
 }
