Embed debug info + use Deterministic build

--- a/Hi3Helper.Plugin.Core.csproj
+++ b/Hi3Helper.Plugin.Core.csproj
@@ -9,6 +9,8 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <Platforms>x64</Platforms>
     <LangVersion>preview</LangVersion>
+    <DebugType>embedded</DebugType>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
