--- a/Hi3Helper.Plugin.Core.csproj
+++ b/Hi3Helper.Plugin.Core.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
+    <PackageReference Include="System.IO.Hashing" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
