Adding new reflection-free JSON parser interfaces
This is in the needs to implement near reflection-free plugin, leads to help reducing the compiled binary size significantly.

The next approach is to implement a manual COM marshaller and remoevs unnecessary reflection/DynamicCode dependency

--- a/Hi3Helper.Plugin.Core.csproj
+++ b/Hi3Helper.Plugin.Core.csproj
@@ -11,6 +11,7 @@
     <LangVersion>preview</LangVersion>
     <DebugType>embedded</DebugType>
     <Deterministic>true</Deterministic>
+    <DefineConstants>USELIGHTWEIGHTJSONPARSER</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
