--- a/PluginTest/Properties/launchSettings.json
+++ b/PluginTest/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PluginTest": {
       "commandName": "Project",
-      "commandLineArgs": "NoWait \"E:\\myGit\\Hi3Helper.Plugin.HBR\\Hi3Helper.Plugin.HBR\\publish\\Debug\\Hi3Helper.Plugin.HBR.dll\"",
+      "commandLineArgs": "NoWait \"E:\\myGit\\Hi3Helper.Plugin.HBR\\Hi3Helper.Plugin.HBR\\publish\\Release\\Hi3Helper.Plugin.HBR.dll\"",
       "nativeDebugging": true
     }
   }
