Implement reflection-free plugin (pt. 1)
+ Implement manual ABI Wrappers for COM Interface
+ Adds new extension: ABIExtension, ABIExtension<T> : ComWrappers
+ Adds new predefined constant: MANUALCOM
  - This enables reflection-free mode by using manual COM wrappers

--- a/Hi3Helper.Plugin.Core.csproj
+++ b/Hi3Helper.Plugin.Core.csproj
@@ -11,7 +11,7 @@
     <LangVersion>preview</LangVersion>
     <DebugType>embedded</DebugType>
     <Deterministic>true</Deterministic>
-    <DefineConstants>USELIGHTWEIGHTJSONPARSER</DefineConstants>
+    <DefineConstants>USELIGHTWEIGHTJSONPARSER;MANUALCOM</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
