CodeQA - Only assert in DEBUG - Remove warning about CA2256 https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca2256 - Remove unused field
Signed-off-by: Bagus Nur Listiyono <dzakibagus@gmail.com>

--- a/Hi3Helper.Plugin.Core.csproj
+++ b/Hi3Helper.Plugin.Core.csproj
@@ -12,6 +12,7 @@
     <DebugType>embedded</DebugType>
     <Deterministic>true</Deterministic>
     <DefineConstants>USELIGHTWEIGHTJSONPARSER;MANUALCOM</DefineConstants>
+    <NoWarn>$(NoWarn);CA2256</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
