--- a/PluginTest/Properties/launchSettings.json
+++ b/PluginTest/Properties/launchSettings.json
@@ -1,6 +1,11 @@
 {
   "profiles": {
-    "PluginTest": {
+    "PluginTest - WuWa": {
+      "commandName": "Project",
+      "commandLineArgs": "NoWait \"E:\\myGit\\Hi3Helper.Plugin.Wuwa\\Hi3Helper.Plugin.Wuwa\\publish\\Debug\\main.dll\"",
+      "nativeDebugging": true
+    },
+    "PluginTest - HBR": {
       "commandName": "Project",
       "commandLineArgs": "NoWait \"E:\\myGit\\Hi3Helper.Plugin.HBR\\Hi3Helper.Plugin.HBR\\publish\\Debug\\main.dll\"",
       "nativeDebugging": true
